# ius_pm

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: ius_panel.csv  post_hoc_tests.json  sweep_summary.csv
experiments/: empirical_robustness.py  long_panel_subset.py  synthetic_validation.py
figures/: make_ius_scatter.py  make_synthetic_recovery.py
ius/: __init__.py  ils.py  leadership.py  simulate.py  stats.py
paper/: ius_panel_table.tex  main.tex  references.bib
prereg/: manifest.yaml  preregistration.md
protocol/: protocol.md
scripts/: reproduce_paper.sh
tests/: conftest.py  test_ils.py  test_leadership.py  test_pipeline.py  test_simulate.py  test_stats.py
